# quiz-app

./: README.md  docker-compose.yml
client/: .prettierrc  Dockerfile  package.json  pnpm-lock.yaml
client/src/: app.html
client/src/lib/: api.ts  footer.svelte  logged.ts  nav.svelte  util.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/quizes/: +page.svelte  +page.ts
client/src/routes/quizes/[slug]/: +page.svelte  +page.ts
client/src/routes/quizes/[slug]/flashcards/: +page.svelte  +page.ts
client/src/routes/quizes/[slug]/take/: +page.svelte  +page.ts
client/src/routes/register/: +page.svelte
client/src/theme/: _smui-theme.scss
client/src/theme/dark/: _smui-theme.scss
client/static/: smui-dark.css  smui.css
server/: Cargo.toml  Dockerfile
server/migrations/2023-05-28-113653_create_base_tables/: down.sql  up.sql
server/migrations/2023-06-07-213630_add_quizname/: down.sql  up.sql
server/migrations/2023-06-08-174454_add_question_field/: down.sql  up.sql
server/src/: app_api.rs  auth.rs  main.rs  models.rs  schema.rs  util.rs
