[package]
name = "quiz-rest-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
diesel = "2"
bb8 = "0.8"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = "0.7.8"
tracing-subscriber = "0.3.17"
argon2 = { version = "0.5.0", features = ["std"] }
dotenvy = "0.15.7"
tower-http = { version = "0.4.0", features = ["cors"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
unicode-normalization = "0.1.22"
serde_json = "1.0.96"
